add css for navbar and try pages style

--- a/index.html
+++ b/index.html
@@ -3,27 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="assets/CSS/reset.css">
     <link rel="stylesheet" href="assets/CSS/style.css">
 </head>
 <body>
 <header>
-    <div id="wrap">
-        <nav>
-            <ul class="navbar">
-                <li>
-                    <a href="index.html">Acceuil</a>
-                </li>
-                <li>
-                    <a href="games">Jeux</a>
-                    <ul>
-                        <li><a href="csgo">CS:GO</a> </li>
-                        <li><a href="valorant">Valorant</a> </li>
-                        <li><a href="overwatch">Overwatch</a> </li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-    </div>
+    <nav class="wrapper">
+        <ul>
+            <li>
+                <a href="index.html" title="home">Acceuil</a>
+            </li>
+            <li>
+                <a href="games" title="games">Jeux</a>
+                <ul class="sub_menu">
+                    <li><a href="csgo" title="counter strike global offensive">CS:GO</a></li>
+                    <li><a href="valorant" title="valorant">Valorant</a></li>
+                    <li><a href="overwatch" title="overwatch">Overwatch</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="contact.html" title="contact">Contact</a>
+            </li>
+        </ul>
+    </nav>
 </header>
+<div class="corpus">
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus atque illo quaerat quibusdam quos. A adipisci,
+        assumenda at cumque dolore ducimus eos, et incidunt natus officiis omnis, quisquam saepe suscipit?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus atque illo quaerat quibusdam quos. A adipisci,
+        assumenda at cumque dolore ducimus eos, et incidunt natus officiis omnis, quisquam saepe suscipit?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus atque illo quaerat quibusdam quos. A adipisci,
+        assumenda at cumque dolore ducimus eos, et incidunt natus officiis omnis, quisquam saepe suscipit?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus atque illo quaerat quibusdam quos. A adipisci,
+        assumenda at cumque dolore ducimus eos, et incidunt natus officiis omnis, quisquam saepe suscipit?
+    </p>
+</div>
 </body>
 </html>
