add pages for main games and contact

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <li>
                 <a href="games" title="games">Jeux</a>
                 <ul class="sub_menu">
-                    <li><a href="csgo" title="counter strike global offensive">CS:GO</a></li>
-                    <li><a href="valorant" title="valorant">Valorant</a></li>
-                    <li><a href="overwatch" title="overwatch">Overwatch</a></li>
+                    <li><a href="csgo.html" title="counter strike global offensive">CS:GO</a></li>
+                    <li><a href="valorant.html" title="valorant">Valorant</a></li>
+                    <li><a href="overwatch.html" title="overwatch">Overwatch</a></li>
                 </ul>
             </li>
             <li>
