--- a/csgo.html
+++ b/csgo.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="assets/CSS/style.css">
 </head>
 <body>
-
+<header>
+    <nav class="wrapper">
+        <ul>
+            <li>
+                <a href="index.html" title="home">Acceuil</a>
+            </li>
+            <li>
+                <a href="games" title="games">Jeux</a>
+                <ul class="sub_menu">
+                    <li><a href="csgo.html" title="counter strike global offensive">CS:GO</a></li>
+                    <li><a href="valorant.html" title="valorant">Valorant</a></li>
+                    <li><a href="overwatch.html" title="overwatch">Overwatch</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="contact.html" title="contact">Contact</a>
+            </li>
+        </ul>
+    </nav>
+</header>
 </body>
 </html>
