change index content

--- a/index.html
+++ b/index.html
@@ -28,21 +28,28 @@
     </nav>
 </header>
 <div class="corpus">
+    <h1>Baak's tracker</h1>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus atque illo quaerat quibusdam quos. A adipisci,
-        assumenda at cumque dolore ducimus eos, et incidunt natus officiis omnis, quisquam saepe suscipit?
+        <h2>Bienvenue</h2>
+        Bonjour et bienvenu sur mon "stat tracker" ici vous pourrez explorer mes statistique
+        sur diferents jeux. De CS:GO à Valorant en passant par Overwatch, tout est accessible en
+        un seul et même lieu.
     </p>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus atque illo quaerat quibusdam quos. A adipisci,
-        assumenda at cumque dolore ducimus eos, et incidunt natus officiis omnis, quisquam saepe suscipit?
+        <h2>Présentation du site</h2>
+        Vous pouvez vous rendre sur la page concernant un jeu en particulier , aller sur la page
+        'global' qui reprend les stats de chaques jeux pour donner des statistiques générales ou
+        encore vous rendre directement sur le 'stat blender'.
     </p>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus atque illo quaerat quibusdam quos. A adipisci,
-        assumenda at cumque dolore ducimus eos, et incidunt natus officiis omnis, quisquam saepe suscipit?
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus atque illo quaerat quibusdam quos. A adipisci,
-        assumenda at cumque dolore ducimus eos, et incidunt natus officiis omnis, quisquam saepe suscipit?
+        <h2>Le Stat Blender</h2>
+        Le Stat Blender ? Kécéssa ????
+    <br>
+    <br>
+    Le Stat Blender est une fonctionalitée inovante qui vous permettera de calculer diférentes stats
+    ayant pour source les jeux que vous souhaitez. Pour exemple, il est possible de connaitre mon ratio
+    Kill/Death sur CS:GO et Valorant confondu. Ou encore le nombre d'heure de jeu total passé
+    sur Valorant et Overwatch cumulé.
     </p>
 </div>
 </body>
