orthograph corection and adjust send_button

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h2>Présentation du site</h2>
         Vous pouvez vous rendre sur la page concernant un jeu en particulier , aller sur la page
         'global' qui reprend les stats de chaques jeux pour donner des statistiques générales ou
-        encore vous rendre directement sur le 'stat blender'.
+        encore vous rendre directement sur le 'Stat Blender'.
     </p>
     <p>
         <h2>Le Stat Blender</h2>
